--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/Anifanks98/KeralaToursim-NewWebsiteIdea')"
+                onclick="window.open('https://keralatourismredesigned.netlify.app/')"
               >
                 Live Preview
               </button>
